# eadapt-needs-analysis

./: .gitignore  LICENSE_Apache-2.0  LICENSE_MIT  README.md
data/: code_subtype_mapping.xlsx
data/camb_codesets/: README.md  alc138_mc.csv  alc138_mc.description.csv  ano139_mc.csv  ano139_mc.description.csv  anx140_mc.csv  anx140_mc.description.csv  ast127_pc.csv  ast127_pc.description.csv  ast142_mc.csv  atr143_mc.csv  atr143_mc.description.csv  bli144_mc.csv  bli144_mc.description.csv  bro145_mc.csv  bro145_mc.description.csv  camb_code_lists.csv  camb_code_lists.md  can146_mc.csv  can146_mc.description.csv  chd126_mc.csv  chd126_mc.description.csv  ckd147_mc.csv  ckd147_mc.description.csv  cld148_mc.description.csv  con150_pc.csv  con150_pc.description.csv  cop151_mc.csv  cop151_mc.description.csv  dem131_mc.csv  dem131_mc.description.csv  dep152_mc.csv  dep153_pc.csv  dep153_pc.description.csv  dib128_mc.description.csv  div154_mc.csv  div154_mc.description.csv  epi155_mc.csv  epi156_pc.description.csv  hef158_mc.csv  (+40 more)
data/camb_codesets/cam_dl/: Cargo.toml
data/camb_codesets/cam_dl/src/: main.rs
data/termsets/analgesics_ex_migraine_meds/: codes.txt  meta.json
data/termsets/anxiety_meds/: codes.txt  meta.json
data/termsets/asthma/: codes.txt  meta.json
data/termsets/asthma_meds/: codes.txt  meta.json
data/termsets/blood_pressure_measurement/: codes.txt  meta.json
data/termsets/breast_cancer_screening/: codes.txt  meta.json
data/termsets/cholesterol_measurement/: codes.txt
data/termsets/constipation_meds/: codes.txt  meta.json
data/termsets/depression_meds/: codes.txt  meta.json
lib/: Cargo.toml
lib/src/: lib.rs  ltcs.rs  query.rs  range.rs  read2.rs  subtypes.rs  util.rs
lib/src/read2/: codeset.rs  termset.rs  thesaurus.rs
lib/src/read2/termset/: parser.lalrpop  termcodeset.rs
(+23 files in other folders)
