[package]
name = "eadapt-needs-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7.18"
anyhow = "1.0.58"
bincode = "1.3.3"
calamine = { version = "0.18.0", features = ["chrono"] }
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
csv = "1.1.6"
dbase = { version = "0.2.3", features = ["serde"] }
html-escape = "0.2.11"
itertools = "0.10.3"
lalrpop-util = "0.19.8"
logos = "0.12.1"
noisy_float = "0.2.0"
once_cell = "1.12.1"
parking_lot = "0.12.1"
qu = "0.6.0"
#r_mathlib = { git = "https://github.com/derekdreery/r_mathlib", branch = "master" }
rayon = "1.5.3"
regex = "1.5.6"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
serde_regex = { version = "1.1.0", git = "https://github.com/derekdreery/serde-regex" }
serde_with = "1.14.0"
#statrs = "0.16.0"
statrs = { git = "https://github.com/derekdreery/statrs", branch = "binomial_inverse_cdf" }
#term-data-table = "0.2.3"
#term-data-table = { path = "../../../non-work/owned/term-data-table" }
term-data-table = { git = "https://github.com/derekdreery/term-data-table", branch = "main" }
toml = "0.5.9"

[build-dependencies]
lalrpop = "0.19.8"
